// Vitest Snapshot v1

exports[`Sticky > Sticky baseVue demo works fine 1`] = `
<div
  class="t-sticky"
  data-v-4a742626=""
  style="height: 0px;"
>
  <div
    class="t-sticky__content"
    style="z-index: 99; position: fixed; top: 0px;"
  >
    
    <button
      aria-disabled="false"
      class="t-button t-button--size-large t-button--base t-button--primary t-button--rectangle common-button"
      data-v-4a742626=""
      role="button"
      type="button"
    >
      <!---->
      <span
        class="t-button__content"
      >
        
        基础吸顶
        
      </span>
      <!---->
    </button>
    
  </div>
</div>
`;

exports[`Sticky > Sticky containerVue demo works fine 1`] = `
<div
  class="sticky-demo"
  data-v-046295d6=""
  id="container"
>
  <div
    class="t-sticky"
    data-v-046295d6=""
    style="height: 0px;"
  >
    <div
      class="t-sticky__content"
      style="z-index: 99; position: fixed; top: 0px;"
    >
      
      <button
        aria-disabled="false"
        class="t-button t-button--size-large t-button--base t-button--default t-button--rectangle common-button green-button"
        data-v-046295d6=""
        role="button"
        type="button"
      >
        <!---->
        <span
          class="t-button__content"
        >
          
          指定容器
          
        </span>
        <!---->
      </button>
      
    </div>
  </div>
</div>
`;

exports[`Sticky > Sticky mobileVue demo works fine 1`] = `
<div
  class="tdesign-mobile-demo sticky-demo-container"
  data-v-3246353e=""
>
  <h1
    class="title"
    data-v-3246353e=""
  >
    Sticky 吸顶
  </h1>
  <p
    class="summary"
    data-v-3246353e=""
  >
    用于常驻页面顶部的信息、操作展示。
  </p>
  <div
    class="tdesign-mobile-demo-block tdesign-mobile-demo-block_notitle"
    data-v-3246353e=""
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <!--v-if-->
      <p
        class="tdesign-mobile-demo-block__summary tdesign-mobile-demo-block_subtitle"
      >
        基础吸顶
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      <div
        class="t-sticky"
        data-v-3246353e=""
        data-v-4a742626=""
        style="height: 0px;"
      >
        <div
          class="t-sticky__content"
          style="z-index: 99; position: fixed; top: 0px;"
        >
          
          <button
            aria-disabled="false"
            class="t-button t-button--size-large t-button--base t-button--primary t-button--rectangle common-button"
            data-v-4a742626=""
            role="button"
            type="button"
          >
            <!---->
            <span
              class="t-button__content"
            >
              
              基础吸顶
              
            </span>
            <!---->
          </button>
          
        </div>
      </div>
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block tdesign-mobile-demo-block_notitle"
    data-v-3246353e=""
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <!--v-if-->
      <p
        class="tdesign-mobile-demo-block__summary tdesign-mobile-demo-block_subtitle"
      >
        吸顶距离
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      <div
        class="t-sticky"
        data-v-3246353e=""
        data-v-ec54aea2=""
        style="height: 0px;"
      >
        <div
          class="t-sticky__content"
          style="z-index: 99; position: fixed; top: 40px;"
        >
          
          <button
            aria-disabled="false"
            class="t-button t-button--size-large t-button--base t-button--danger t-button--rectangle common-button"
            data-v-ec54aea2=""
            role="button"
            type="button"
          >
            <!---->
            <span
              class="t-button__content"
            >
              
              吸顶距离
              
            </span>
            <!---->
          </button>
          
        </div>
      </div>
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block tdesign-mobile-demo-block_notitle"
    data-v-3246353e=""
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <!--v-if-->
      <p
        class="tdesign-mobile-demo-block__summary tdesign-mobile-demo-block_subtitle"
      >
        指定容器
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      <div
        class="sticky-demo"
        data-v-046295d6=""
        data-v-3246353e=""
        id="container"
      >
        <div
          class="t-sticky"
          data-v-046295d6=""
          style="height: 0px;"
        >
          <div
            class="t-sticky__content"
            style="z-index: 99; position: fixed; top: 0px;"
          >
            
            <button
              aria-disabled="false"
              class="t-button t-button--size-large t-button--base t-button--default t-button--rectangle common-button green-button"
              data-v-046295d6=""
              role="button"
              type="button"
            >
              <!---->
              <span
                class="t-button__content"
              >
                
                指定容器
                
              </span>
              <!---->
            </button>
            
          </div>
        </div>
      </div>
      
    </div>
  </div>
</div>
`;

exports[`Sticky > Sticky offsetVue demo works fine 1`] = `
<div
  class="t-sticky"
  data-v-ec54aea2=""
  style="height: 0px;"
>
  <div
    class="t-sticky__content"
    style="z-index: 99; position: fixed; top: 40px;"
  >
    
    <button
      aria-disabled="false"
      class="t-button t-button--size-large t-button--base t-button--danger t-button--rectangle common-button"
      data-v-ec54aea2=""
      role="button"
      type="button"
    >
      <!---->
      <span
        class="t-button__content"
      >
        
        吸顶距离
        
      </span>
      <!---->
    </button>
    
  </div>
</div>
`;
